# cpp_qt_projects

./: README.md
address_space/: addres_space.md  main.cpp
binary_tree/: CMakeLists.txt  main.cpp
gui_agent/: README.md
gui_agent/system_monitor/: CMakeLists.txt
gui_agent/system_monitor/agent/: CMakeLists.txt  agent.cpp  agent.h  main.cpp
gui_agent/system_monitor/common/: CMakeLists.txt  protocol.h
gui_agent/system_monitor/gui/: CMakeLists.txt  gui.cpp  gui.h  main.cpp
heap/: main.cpp  result  simple_heap.cpp
my_first_qt_project/: CMakeLists.txt  main.cpp
my_second_qt_project/: CMakeLists.txt  main.cpp  stack.cpp
theory/: session_context_space.md
